// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shinkansen-sprockets/components/group/check-answers <Group /> With additional props renders type \`boolean\` answers 1`] = `
<div
  className="MOCK CLASSNAME"
>
  MOCK BOOLEAN ANSWER
</div>
`;

exports[`shinkansen-sprockets/components/group/check-answers <Group /> With additional props renders type \`null\` answers 1`] = `
<div
  className="MOCK CLASSNAME"
>
  MOCK NULL ANSWER
</div>
`;

exports[`shinkansen-sprockets/components/group/check-answers <Group /> With additional props renders type \`number\` answers 1`] = `
<div
  className="MOCK CLASSNAME"
>
  MOCK NUMBER ANSWER
</div>
`;

exports[`shinkansen-sprockets/components/group/check-answers <Group /> With additional props renders type \`string\` answers 1`] = `
<div
  className="MOCK CLASSNAME"
>
  MOCK STRING ANSWER
</div>
`;

exports[`shinkansen-sprockets/components/group/check-answers <Group /> With required props renders 1`] = `
<div
  className="MOCK CLASSNAME"
/>
`;
